--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "ts-node --esm server/index.ts"
+    "server": "NODE_OPTIONS='--experimental-specifier-resolution=node' ts-node --esm server/index.ts"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -18,7 +18,6 @@
     "@mui/material": "^6.4.1",
     "@uiw/react-md-editor": "^4.0.5",
     "cors": "^2.8.5",
-    "dockerode": "^3.3.5",
     "express": "^4.21.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -27,7 +26,6 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/cors": "^2.8.17",
-    "@types/dockerode": "^3.3.34",
     "@types/express": "^5.0.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
